Removes index column from date.csv

--- a/dmc2016/visualizer.ipynb
+++ b/dmc2016/visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,10 +254,28 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from dmc2016.datautils import load_orders_train\n",
+    "from dmc2016.datautils import load_orders_train, process_date\n",
     "\n",
     "df = load_orders_train()\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        day month  year\n0        01    01  2014\n1        01    01  2014\n2        01    01  2014\n3        01    01  2014\n4        01    01  2014\n5        01    01  2014\n6        01    01  2014\n7        01    01  2014\n8        01    01  2014\n9        01    01  2014\n10       01    01  2014\n11       01    01  2014\n12       01    01  2014\n13       01    01  2014\n14       01    01  2014\n15       01    01  2014\n16       01    01  2014\n17       01    01  2014\n18       01    01  2014\n19       01    01  2014\n20       01    01  2014\n21       01    01  2014\n22       01    01  2014\n23       01    01  2014\n24       01    01  2014\n25       01    01  2014\n26       01    01  2014\n27       01    01  2014\n28       01    01  2014\n29       01    01  2014\n...      ..   ...   ...\n2325135  30    09  2015\n2325136  30    09  2015\n2325137  30    09  2015\n2325138  30    09  2015\n2325139  30    09  2015\n2325140  30    09  2015\n2325141  30    09  2015\n2325142  30    09  2015\n2325143  30    09  2015\n2325144  30    09  2015\n2325145  30    09  2015\n2325146  30    09  2015\n2325147  30    09  2015\n2325148  30    09  2015\n2325149  30    09  2015\n2325150  30    09  2015\n2325151  30    09  2015\n2325152  30    09  2015\n2325153  30    09  2015\n2325154  30    09  2015\n2325155  30    09  2015\n2325156  30    09  2015\n2325157  30    09  2015\n2325158  30    09  2015\n2325159  30    09  2015\n2325160  30    09  2015\n2325161  30    09  2015\n2325162  30    09  2015\n2325163  30    09  2015\n2325164  30    09  2015\n\n[2325165 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = process_date(df)\n",
+    "df"
    ]
   },
   {
