Implements partially clean up price function - (cleanup process)

--- a/dmc2016/visualizer.ipynb
+++ b/dmc2016/visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from dmc2016.datautils import load_orders_train, process_date, PATH\n",
+    "from dmc2016.datautils import load_orders_train, PATH\n",
     "\n",
     "df = load_orders_train()\n",
     "df.head()"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1034,12 +1034,13 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from dmc2016.datautils import process_date\n",
     "process_date(df)\n",
     "date_df = pd.read_csv(PATH + 'date.csv')\n",
     "date_df"
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1057,7 @@
        "quantity\n0       31643\n1     2275335\n2       16168\n3        1340\n4         325\n5         349\n7           1\n9           1\n11          1\n15          1\n24          1\ndtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,10 +1069,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quantity\n1    2238148\n2      14563\n3       1160\n4        267\n5        260\ndtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ""
+    "from dmc2016.datautils import cleanup_data\n",
+    "cleaned_df = cleanup_data(df)\n",
+    "cleaned_df.groupby('quantity').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price\n0.00      15200\n3.00          5\n4.00        397\n4.20          1\n5.00       9539\n7.00       4914\n8.00      13387\n8.39          3\n9.00      23467\n9.95         25\n9.99      21078\n10.00     31150\n10.08         2\n10.88         9\n12.00     52534\n12.61         3\n12.95     33140\n12.99     16576\n13.44         5\n14.00      4430\n15.00     92501\n15.12         7\n15.99     29196\n16.00       157\n16.80        20\n16.81         4\n17.99     48302\n18.00     56813\n19.32         6\n19.63        11\n          ...  \n209.97       29\n219.99      739\n220.00        3\n225.00        3\n229.99     2578\n239.96        4\n239.97        3\n239.98        9\n239.99      304\n240.00        3\n249.95        7\n250.00        6\n252.08        1\n259.98        4\n269.97        2\n279.96        5\n279.98        5\n299.95       12\n299.97        3\n299.98        2\n300.00        1\n319.98        1\n320.00        4\n339.98        3\n349.95       13\n359.96        1\n400.00       26\n439.98        3\n459.98        5\n600.00        2\ndtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_df.groupby('price').size()"
    ]
   }
  ],
