Shows nasty customers and most unwanted colors

--- a/dmc2016/visualizer.ipynb
+++ b/dmc2016/visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "quantity\n0       31643\n1     2275335\n2       16168\n3        1340\n4         325\n5         349\n7           1\n9           1\n11          1\n15          1\n24          1\ndtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,16 +1069,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "quantity\n1    2259696\n2      15813\n3        999\n4         19\n5         51\ndtype: int64"
+       "quantity\n1    2258952\n2      15813\n3        999\n4         19\n5         51\ndtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,22 +1091,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "price\n4.00         397\n5.00        9539\n7.00        4914\n8.00       13387\n9.00       23467\n9.99       21078\n10.00      31150\n12.00      52534\n12.95      33140\n12.99      16576\n14.00       4430\n15.00      92501\n15.99      29196\n16.00        157\n17.99      48302\n18.00      56813\n19.98        748\n19.99      70598\n20.00     153233\n22.99      64049\n23.99        104\n24.00        323\n24.99        342\n25.00      60651\n25.20        127\n25.90       1131\n25.98        170\n25.99      85816\n26.66        199\n27.99      23966\n           ...  \n71.98        398\n75.00        207\n79.98       1246\n79.99      15587\n80.00        632\n85.00       1162\n89.99      13040\n90.00       1258\n99.98        694\n99.99      16397\n100.00      1285\n109.00       298\n110.00      1437\n119.98       641\n119.99      3180\n120.00      1127\n129.99      1904\n130.00       252\n139.98       661\n139.99      3197\n149.99      1354\n150.00       444\n159.99       275\n160.00      1641\n169.99      1305\n179.99       355\n199.99       338\n219.99       739\n229.99      2578\n239.99       304\ndtype: int64"
+       "price\n4.00         397\n5.00        9539\n7.00        4914\n8.00       13387\n9.00       23467\n9.99       21078\n10.00      31072\n12.00      52529\n12.95      33140\n12.99      16576\n14.00       4430\n15.00      92455\n15.99      29196\n16.00        157\n17.99      48302\n18.00      56813\n19.98        748\n19.99      70598\n20.00     153222\n22.99      64049\n23.99        104\n24.00        323\n24.99        342\n25.00      60446\n25.20        127\n25.90       1131\n25.98        170\n25.99      85816\n26.66        199\n27.99      23966\n           ...  \n71.98        398\n75.00        207\n79.98       1246\n79.99      15587\n80.00        632\n85.00       1155\n89.99      13040\n90.00       1258\n99.98        694\n99.99      16397\n100.00      1239\n109.00       298\n110.00      1437\n119.98       641\n119.99      3180\n120.00      1036\n129.99      1904\n130.00       235\n139.98       661\n139.99      3197\n149.99      1354\n150.00       444\n159.99       275\n160.00      1641\n169.99      1305\n179.99       355\n199.99       338\n219.99       739\n229.99      2578\n239.99       304\ndtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cleaned_df.groupby('price').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "310"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dmc2016.datautils import show_nasty_customers\n",
+    "\n",
+    "nasty_customers = show_nasty_customers(df, lambda x: x > 100)\n",
+    "len(nasty_customers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dmc2016.datautils import show_most_unwanted_colors\n",
+    "\n",
+    "show_most_unwanted_colors = show_most_unwanted_colors(df, lambda x: x > 5000)\n",
+    "len(show_most_unwanted_colors)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
