Implements convert and map column function

--- a/dmc2016/visualizer.ipynb
+++ b/dmc2016/visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
        "</div>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,10 +425,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sizeCode\n100      1059\n25       5104\n26       9836\n27      17139\n28      22634\n29      30560\n30      29115\n31      26133\n32      36554\n33      20890\n34     147173\n36     270462\n38     395163\n40     393547\n42     393244\n44     359473\n80       1157\n85       1680\n90       1613\n95       1597\nA       42014\nI      116374\ndtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ""
+    "from dmc2016.datautils import cleanup_sizecode\n",
+    "\n",
+    "cleaned_sizecode_df = cleanup_sizecode(df)\n",
+    "cleaned_sizecode_df.groupby('sizeCode').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "returnQuantity\n0    1117156\n1    1204005\n2       3749\n3        192\n4         35\n5         28\ndtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('returnQuantity').size()\n",
+    "# We can use classification models :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "articleID\ni1000003       1\ni1000005       1\ni1000006       1\ni1000007       2\ni1000008       6\ni1000009       6\ni1000010       7\ni1000011       1\ni1000012       6\ni1000013      19\ni1000014      12\ni1000015      28\ni1000016      23\ni1000017       3\ni1000018      32\ni1000019       4\ni1000020       4\ni1000021       4\ni1000023       6\ni1000024      12\ni1000025      11\ni1000026      30\ni1000027       5\ni1000028     395\ni1000029     555\ni1000030     370\ni1000031     549\ni1000032     215\ni1000033     481\ni1000034      10\n            ... \ni1003969     476\ni1003970    1087\ni1003971     322\ni1003972     790\ni1003973     943\ni1003974     140\ni1003975     235\ni1003976     126\ni1003977     120\ni1003978     146\ni1003979     347\ni1003980     338\ni1003981     477\ni1003982       1\ni1003984      35\ni1003985    2847\ni1003986      31\ni1003987     536\ni1003988     689\ni1003989    2427\ni1003990     160\ni1003991     593\ni1003992     949\ni1003993    1624\ni1003994    1333\ni1003995     648\ni1003996    2175\ni1003997     218\ni1003998     940\ni1004001     351\ndtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('articleID').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "articleID\ni1000267     2538\ni1000269     2415\ni1000296     2291\ni1000298     2337\ni1000312     3365\ni1000313     2971\ni1000314    14515\ni1000315     6023\ni1000318     2082\ni1000319     2808\ni1000320     2589\ni1000321     2820\ni1000322     4755\ni1000323     2076\ni1000325     3135\ni1000328     2073\ni1000342     2254\ni1000350     4288\ni1000358     3133\ni1000359     3884\ni1000364     5909\ni1000365     5701\ni1000372     6307\ni1000373     5275\ni1000376     2429\ni1000377     4623\ni1000385     2172\ni1000397    13508\ni1000398     6044\ni1000403     2127\n            ...  \ni1002094     3845\ni1002287     2323\ni1002334     3166\ni1002381     2410\ni1002506     5075\ni1002683     2822\ni1003127     2257\ni1003278    26208\ni1003279     8424\ni1003435     2773\ni1003471     2005\ni1003505     2611\ni1003517     3833\ni1003519     2704\ni1003714     2228\ni1003741     2093\ni1003817     2268\ni1003848     2308\ni1003868     3413\ni1003869     2959\ni1003877     2175\ni1003883     2992\ni1003886     2767\ni1003890     2913\ni1003894     2139\ni1003895     2215\ni1003896     4496\ni1003985     2847\ni1003989     2427\ni1003996     2175\ndtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dmc2016.datautils import cleanup_articleid\n",
+    "\n",
+    "cleaned_articleid_df = cleanup_articleid(df)\n",
+    "cleaned_articleid_df.groupby('articleID').size()"
    ]
   }
  ],
